welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:1: error: Missing closing brace `}' assumed here
override def run() {for (i<-1 to 2) 
^PatternPicture:1: error: expected start of definition
override def run() {for (i<-1 to 2) 
         ^